Fix alignment of Published Facebook raffle

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -5,4 +5,5 @@
   padding: 0;
   flex-direction: column;
   flex: 1;
+  justify-content: space-between;
 }
